--- a/digit-recognizer-competition.ipynb
+++ b/digit-recognizer-competition.ipynb
@@ -12,9 +12,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "/kaggle/input/digit-recognizer/train.csv\n",
       "/kaggle/input/digit-recognizer/test.csv\n",
-      "/kaggle/input/digit-recognizer/sample_submission.csv\n",
-      "/kaggle/input/digit-recognizer/train.csv\n"
+      "/kaggle/input/digit-recognizer/sample_submission.csv\n"
      ]
     }
    ],
@@ -244,10 +244,10 @@
    ],
    "source": [
     "# Load data\n",
-    "X_train_orig = pd.read_csv('/kaggle/input/digit-recognizer/train.csv')\n",
-    "X_test = pd.read_csv('/kaggle/input/digit-recognizer/test.csv')\n",
+    "train_data = pd.read_csv('/kaggle/input/digit-recognizer/train.csv')\n",
+    "test_data = pd.read_csv('/kaggle/input/digit-recognizer/test.csv')\n",
     "\n",
-    "X_train_orig.head()"
+    "train_data.head()"
    ]
   },
   {
@@ -291,80 +291,80 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "     0    1    2    3    4    5    6    7    8    9\n",
-       "0  0.0  1.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0\n",
-       "1  1.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0\n",
-       "2  0.0  1.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0\n",
-       "3  0.0  0.0  0.0  0.0  1.0  0.0  0.0  0.0  0.0  0.0\n",
-       "4  1.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0"
+       "   0  1  2  3  4  5  6  7  8  9\n",
+       "0  0  1  0  0  0  0  0  0  0  0\n",
+       "1  1  0  0  0  0  0  0  0  0  0\n",
+       "2  0  1  0  0  0  0  0  0  0  0\n",
+       "3  0  0  0  0  1  0  0  0  0  0\n",
+       "4  1  0  0  0  0  0  0  0  0  0"
       ]
      },
      "execution_count": 3,
@@ -374,7 +374,7 @@
    ],
    "source": [
     "# Prepare data\n",
-    "X_train = X_train_orig.copy()\n",
+    "X_train = train_data.drop(columns=['label'])\n",
     "\n",
     "# Convert original label data to categorical, i.e.\n",
     "# label  ->  0  1  2  3  4  5  6  7  8  9\n",
@@ -384,15 +384,9 @@
     "#     1  ->  0  1  0  0  0  0  0  0  0  0\n",
     "#     4  ->  0  0  0  0  1  0  0  0  0  0\n",
     "#     0  ->  1  0  0  0  0  0  0  0  0  0\n",
-    "def label_to_cat(row):\n",
-    "    row[row.label] = 1\n",
-    "    return row\n",
-    "y_train = pd.DataFrame(np.zeros((len(X_train.index), 10)))\n",
-    "y_train['label'] = X_train.label\n",
-    "y_train = y_train.apply(lambda x: label_to_cat(x), axis=1)\n",
-    "y_train = y_train.drop(columns=['label'])\n",
-    "X_train = X_train.drop(columns=['label'])\n",
-    "y_train.head()"
+    "from tensorflow.python.keras.utils.np_utils import to_categorical\n",
+    "y_train = to_categorical(train_data.label.to_numpy(), dtype='int')\n",
+    "pd.DataFrame(y_train).head()"
    ]
   },
   {
@@ -406,11 +400,20 @@
    "source": [
     "# Craete model\n",
     "from tensorflow.python.keras.models import Sequential\n",
-    "from tensorflow.python.keras.layers import Dense, Flatten\n",
+    "from tensorflow.python.keras.layers import Dense, Flatten, Reshape\n",
+    "from tensorflow.python.keras.layers import Conv2D, MaxPooling2D\n",
     "\n",
     "model = Sequential()\n",
-    "model.add(Flatten(input_shape=(28 * 28,)))\n",
-    "model.add(Dense(28 * 28, activation='relu'))\n",
+    "model.add(Reshape((28, 28, 1), input_shape=(28 * 28,)))\n",
+    "\n",
+    "model.add(Conv2D(20, (5, 5), activation='relu'))\n",
+    "model.add(MaxPooling2D(pool_size=(2, 2)))\n",
+    "\n",
+    "model.add(Conv2D(40, (4, 4), activation='relu'))\n",
+    "model.add(MaxPooling2D(pool_size=(3, 3)))\n",
+    "\n",
+    "model.add(Flatten())\n",
+    "model.add(Dense(150, activation='relu'))\n",
     "model.add(Dense(10, activation='softmax'))\n",
     "\n",
     "model.compile(optimizer='adam', loss='categorical_crossentropy', metrics=['accuracy'])"
@@ -426,32 +429,74 @@
      "output_type": "stream",
      "text": [
       "Train on 42000 samples\n",
-      "Epoch 1/5\n",
-      "42000/42000 [==============================] - 6s 137us/sample - loss: 3.4826 - accuracy: 0.9086\n",
-      "Epoch 2/5\n",
-      "42000/42000 [==============================] - 5s 124us/sample - loss: 0.4509 - accuracy: 0.9417\n",
-      "Epoch 3/5\n",
-      "42000/42000 [==============================] - 5s 123us/sample - loss: 0.3859 - accuracy: 0.9451\n",
-      "Epoch 4/5\n",
-      "42000/42000 [==============================] - 5s 122us/sample - loss: 0.3070 - accuracy: 0.9499\n",
-      "Epoch 5/5\n",
-      "42000/42000 [==============================] - 5s 123us/sample - loss: 0.3229 - accuracy: 0.9488\n"
+      "Epoch 1/50\n",
+      "42000/42000 [==============================] - 20s 484us/sample - loss: 0.4949 - accuracy: 0.9232\n",
+      "Epoch 2/50\n",
+      "42000/42000 [==============================] - 20s 466us/sample - loss: 0.0916 - accuracy: 0.9727\n",
+      "Epoch 3/50\n",
+      "42000/42000 [==============================] - 19s 450us/sample - loss: 0.0662 - accuracy: 0.9801\n",
+      "Epoch 4/50\n",
+      "42000/42000 [==============================] - 19s 461us/sample - loss: 0.0531 - accuracy: 0.9846\n",
+      "Epoch 5/50\n",
+      "42000/42000 [==============================] - 19s 464us/sample - loss: 0.0494 - accuracy: 0.9844\n",
+      "Epoch 6/50\n",
+      "42000/42000 [==============================] - 19s 448us/sample - loss: 0.0482 - accuracy: 0.9859\n",
+      "Epoch 7/50\n",
+      "42000/42000 [==============================] - 19s 445us/sample - loss: 0.0407 - accuracy: 0.9879\n",
+      "Epoch 8/50\n",
+      "42000/42000 [==============================] - 22s 516us/sample - loss: 0.0391 - accuracy: 0.9887\n",
+      "Epoch 9/50\n",
+      "42000/42000 [==============================] - 19s 447us/sample - loss: 0.0328 - accuracy: 0.9910\n",
+      "Epoch 10/50\n",
+      "42000/42000 [==============================] - 19s 445us/sample - loss: 0.0330 - accuracy: 0.9904\n",
+      "Epoch 11/50\n",
+      "42000/42000 [==============================] - 19s 459us/sample - loss: 0.0381 - accuracy: 0.9903\n",
+      "Epoch 12/50\n",
+      "42000/42000 [==============================] - 19s 448us/sample - loss: 0.0281 - accuracy: 0.9919\n",
+      "Epoch 13/50\n",
+      "42000/42000 [==============================] - 18s 440us/sample - loss: 0.0271 - accuracy: 0.9930\n",
+      "Epoch 14/50\n",
+      "42000/42000 [==============================] - 19s 456us/sample - loss: 0.0326 - accuracy: 0.9919\n",
+      "Epoch 15/50\n",
+      "42000/42000 [==============================] - 19s 443us/sample - loss: 0.0221 - accuracy: 0.9952\n",
+      "Epoch 27/50\n",
+      "42000/42000 [==============================] - 19s 461us/sample - loss: 0.0246 - accuracy: 0.9956\n",
+      "Epoch 28/50\n",
+      "42000/42000 [==============================] - 19s 445us/sample - loss: 0.0225 - accuracy: 0.9959\n",
+      "Epoch 29/50\n",
+      "42000/42000 [==============================] - 18s 439us/sample - loss: 0.0331 - accuracy: 0.9951\n",
+      "Epoch 30/50\n",
+      "42000/42000 [==============================] - 19s 461us/sample - loss: 0.0298 - accuracy: 0.9960\n",
+      "Epoch 31/50\n",
+      "42000/42000 [==============================] - 19s 443us/sample - loss: 0.0340 - accuracy: 0.9956\n",
+      "Epoch 32/50\n",
+      "42000/42000 [==============================] - 19s 442us/sample - loss: 0.0305 - accuracy: 0.9958\n",
+      "Epoch 33/50\n",
+      "42000/42000 [==============================] - 19s 463us/sample - loss: 0.0251 - accuracy: 0.9961\n",
+      "Epoch 34/50\n",
+      "42000/42000 [==============================] - 19s 456us/sample - loss: 0.0231 - accuracy: 0.9969\n",
+      "Epoch 35/50\n",
+      "42000/42000 [==============================] - 19s 442us/sample - loss: 0.0250 - accuracy: 0.9965\n",
+      "Epoch 36/50\n",
+      "42000/42000 [==============================] - 19s 459us/sample - loss: 0.0329 - accuracy: 0.9961\n",
+      "Epoch 37/50\n",
+      "42000/42000 [==============================] - 19s 453us/sample - loss: 0.0289 - accuracy: 0.9965\n",
+      "Epoch 38/50\n",
+      "42000/42000 [==============================] - 19s 446us/sample - loss: 0.0418 - accuracy: 0.9960\n",
+      "Epoch 39/50\n",
+      "42000/42000 [==============================] - 18s 439us/sample - loss: 0.0253 - accuracy: 0.9972\n",
+      "Epoch 40/50\n",
+      "42000/42000 [==============================] - 19s 460us/sample - loss: 0.0267 - accuracy: 0.9969\n",
+      "Epoch 41/50\n",
+      "42000/42000 [==============================] - 19s 445us/sample - loss: 0.0397 - accuracy: 0.9960\n",
+      "Epoch 42/50\n",
+      "24544/42000 [================>.............] - ETA: 7s - loss: 0.0415 - accuracy: 0.9963"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "<tensorflow.python.keras.callbacks.History at 0x7face849b0b8>"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
     "# Fit model\n",
-    "model.fit(X_train, y_train, epochs=5, batch_size=32)"
+    "model.fit(X_train, y_train, epochs=50, batch_size=32)"
    ]
   },
   {
@@ -469,7 +514,7 @@
    ],
    "source": [
     "# Submit predictions\n",
-    "predictions = model.predict(X_test.values)\n",
+    "predictions = model.predict(test_data.values)\n",
     "\n",
     "output = pd.DataFrame({'ImageId': pd.Series(range(1, len(predictions) + 1)),\n",
     "                       'Label': predictions.argmax(axis=1)})\n",
